# pads-adam-setup-ai-agent

./: .gitignore  LINKS  ONBOARDING.md  README.md
admin_app/: .env.local.exemple  README.md  eslint.config.js  package.json
admin_app/src/: middleware.ts
admin_app/src/app/: globals.css  layout.tsx  page.tsx
admin_app/src/app/api/feedback/: route.ts
admin_app/src/app/api/feedback/demo/: route.ts
admin_app/src/app/api/feedback/stats/: route.ts
admin_app/src/app/dashboard/: page.tsx
admin_app/src/app/evaluation/: page.tsx
admin_app/src/app/login/: page.tsx
admin_app/src/components/: FeedbackDashboard.tsx  LoginForm.tsx
admin_app/src/lib/: auth.ts  feedbackService.ts  gcsAuth.ts
admin_app/src/types/: feedback.ts
backend/: docker-compose.yml
backend/adam-api/: Dockerfile  README.md  main.py  pyproject.toml
backend/adam-api/agents/: analyser_agent.py  anomaly_det_runner_agent.py  classifier_intent_agent.py  code_generator_agent.py  dsp_agent.py  final_response_agent.py  language_detecter.py  memory_agent.py
backend/adam-api/agents/prompts/: analyser_prompt_creator.py  anomaly_detection_prompt.py  clarify_intent_prompt.py  code_gen_prompt.py  dsp_prompt.py  final_result_prompt.py  instruction_prompts_parser.py  language_prompt.py  prompt_instructions.json
backend/adam-api/agents/prompts/legagy_prompts/: anomaly_detection_prompt_legacy.py
backend/adam-api/agents/prompts/static_check_instructions/: budget_check.txt  other_check.txt  quality_check.txt  targeting_check.txt
backend/adam-api/agents/tools/: __init__.py  campaign_anomaly_detector_tool.py  dsp_tools.py  exec_code_tool.py  io_anomaly_detector_tool.py  li_anomaly_detector_tool.py
backend/adam-api/config/: configs.py
backend/adam-api/data/: general_metadata.json  update_metadata.py  write_metadata_to_sheet.py
backend/adam-api/data/bm25/: bm25_ads_gen_values.json  bm25_amc_cours.json  bm25_amz_api.json  bm25_amz_cours.json  bm25_amz_values.json  bm25_cm_cours.json  bm25_cm_values.json  bm25_dv_values.json  bm25_ga4_values.json  bm25_sads_cours.json  bm25_sads_values.json  bm25_tag_values.json  bm25_xander.json  bm25_xander_release.json  databm25.json  dvbm25.json
backend/adam-api/graph_system/: initializer.py  node_builder.py  routes.py  states.py
backend/adam-api/graph_system/nodes/: exec_code_node.py  result_captor.py  retriever_instruction.py  summary_result.py
backend/adam-api/routes/: __init__.py  chat.py  data.py  feedback.py  health.py  models.py
backend/adam-api/utils/: advertiser_cache.py  constants.py  context_retriever.py  data_loader.py  gcs_uploader.py  helpers.py  init_postgres_db.py  json_utils.py  langgraph.json  migrate_feedback_to_db.py  migrate_table_names.py  postgres_storage.py  test_postgres_storage.py
backend/evaluation-api/: .dockerignore  .env.example  Dockerfile  README.md  install-uv.sh  main.py  pyproject.toml
backend/evaluation-api/routes/: evaluation.py  health.py
backend/evaluation-api/services/: adam_client.py  evaluation_state_db.py  llm_judge.py  sheet_evaluator.py
docs/: flow.excalidraw
frontend/: README.md  package-lock.json  package.json  start.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: ChatInterface.tsx  CsvPreviewModal.tsx  FeedbackForm.tsx  MarkdownRenderer.tsx
frontend/src/services/: api.ts
frontend/src/styles/: markdown.css
frontend/src/types/: api.ts
